--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="author" content="gsk-jam" />
-  <title>GSK Oppmøte</title>
+<!--  <title>GSK Oppmøte</title>
   <meta name="description" content="Oppmøteprotokoll Grimstad Svømmeklubb">
-
+-->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <link href="css/bootstrap.min.css" rel="stylesheet">
-  <script src="js/jquery-2.0.3.min.js"></script>
+  <script src="js/jquery-2.1.1.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/angular/angular.min.js"></script>
   <script>
@@ -17,11 +17,19 @@
 
   app.controller('attCtrl', function ($scope, $http){
     $scope.date = new Date();
+    $scope.groups = [ 
+    {name: "Alle", id: 0},
+    {name: "A-gruppa", id: 1},
+    {name: "B-gruppa", id: 2},
+    {name: "C-gruppa", id: 3},
+    {name: "D-gruppa", id: 4}];
+    $scope.groupSelected = $scope.groups[0];
+    $scope.persons = [];
+    $scope.attendance = [];    
     
-    $http.get('api/attendance.php/users').success(function(data) {
+    $http.get('api/attendance.php/users/group/'+$scope.groupSelected.id).success(function(data) {
 
       $scope.persons = data;
-      $scope.attendance = [];
 
       for(var i=0; i < $scope.persons.length;i++) {
         $scope.attendance.push(
@@ -31,6 +39,7 @@
            attended: false});
       }
     });
+
     $scope.getDayName = function(date) {
       var daynames = ["Søndag", "Mandag", "Tirsdag", "Onsdag", "Torsdag", "Fredag", "Lørdag"];
       return daynames[date.getDay()];
@@ -40,6 +49,20 @@
       return date.getFullYear() + '-' +
       (date.getMonth() < 9 ? '0' : '') + (date.getMonth()+1) + '-' +
       (date.getDate() < 10 ? '0' : '') + date.getDate();
+    };
+
+    $scope.getGroup = function() {
+      console.log("Get group: "+$scope.groupSelected.name);
+      $http.get('api/attendance.php/users/group/'+$scope.groupSelected.id).success(function(data) {
+        $scope.persons = data;
+        for(var i=0; i < $scope.persons.length;i++) {
+          $scope.attendance.push(
+            {id: $scope.persons[i].id,
+             name: $scope.persons[i].name,
+             comment: "",
+             attended: false});
+        }
+      });
     };
 
     $scope.sendAttendance = function() {
@@ -54,7 +77,7 @@
       error(function(data, status, headers, config) {
         console.log("Error: "+JSON.stringify(config));
       });
-    }
+    };
   });
 </script>
 
@@ -70,69 +93,55 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#"> <img src="img/logo.png" height="50" width="57"></a>
+<!--        <a class="navbar-brand" href="#"> <img src="img/logo.png" alt="Grimstad svømmeklubb" height="50" width="57"></a>
+-->
       </div>
-      <div class="navbar-collapse collapse">
-        <form class="navbar-form navbar-right" role="form">
-          <div class="form-group">
-            <input type="text" placeholder="Email" class="form-control">
-          </div>
-          <div class="form-group">
-            <input type="password" placeholder="Passord" class="form-control">
-          </div>
-          <button type="submit" class="btn btn-success">Log inn</button>
-        </form>
-      </div><!--/.navbar-collapse -->
     </div>
   </div>
 
   <header class="jumbotron">
     <div class="container">
-      <h3>GSK Oppmøteprotokoll</h3>
-      <p>Registrering av oppmøte i konkurransegruppene.</p>
+      <div class="row">
+        <!-- <h3>GSK Oppmøteprotokoll</h3> -->
+        <h2>Angular test</h2>
+      </div>
+      <div class="row">
+        <div class="visible-md">
+          <!-- <p>Registrering av oppmøte i konkurransegruppene.</p> -->
+        </div>
+      </div>
     </div>
   </header>
-
   <div data-ng-controller="attCtrl" class="container">
     <div class="row">
-      <div class="col-md-4 ">
-        <h3>
+      <div>
+        <h3 style="text-align: center;">
           Oppmøte for {{getDayName(date)}} {{date.toLocaleDateString("nb-NO")}}
         </h3>
       </div>
-
-      <div class="col-md-8">
-        <div class="row">
-          <select class="form-control">
-            <option value="1">A-gruppa</option>
-            <option value="2">B-gruppa</option>
-            <option value="3">C-gruppa</option>
-            <option value="4">D-gruppa</option>
-            <option value="5">T-gruppa</option>
-          </select>
-        </div>
-        <div class="row">
-          <div class="col-md-8"></div>
-          <table class="table">
-            <thead>
-              <tr>
-                <th>Navn</th>
-                <th>Møtt</th>
-                <th>Kommentar</th>
-              </tr>
-            </thead>
-            <tr data-ng-repeat="att in attendance">
-              <td> {{att.name}} </td>
-              <td>
-                <input type="checkbox" value="{{att.name}}" data-ng-model="att.attended">
-              </td>
-              <td><input type="text" class="form-control"  placeholder="Kommentar, årsak til fravær, etc" style="width:100%" data-ng-model="att.comment"></td>
+      <div class="row">
+        <p>
+          <select class="form-control" ng-change="getGroup()" ng-model="groupSelected" ng-options="group.name for group in groups"></select>
+        </p>
+      </div>
+      <div class="row">
+        <table class="table">
+          <thead>
+            <tr>
+              <th>Navn</th>
+              <th>Møtt</th>
+              <th>Kommentar</th>
             </tr>
-          </table>
-          <button data-ng-click="sendAttendance()" style="margin-right: 10px">Ferdig</button>
-          <p>Oppmøte: {{attendance}}</p>
-          <div class="col-md-4"></div>
-        </div>
+          </thead>
+          <tr data-ng-repeat="att in attendance">
+            <td> {{att.name}} </td>
+            <td>
+              <input type="checkbox" value="{{att.name}}" data-ng-model="att.attended">
+            </td>
+            <td><input type="text" class="form-control"  placeholder="Kommentar, årsak til fravær, etc" style="width:100%" data-ng-model="att.comment"></td>
+          </tr>
+        </table>
+        <button data-ng-click="sendAttendance()" class="btn btn-primary btn-lg btn-block">Ferdig</button>
       </div>
     </div>
   </div>
