--- a/index.html
+++ b/index.html
@@ -69,11 +69,6 @@
       });
     };
 
-    $scope.printAttendance = function(attended) {
-      console.log(attended);
-
-    };
-
     $scope.sendAttendance = function() {
       console.log("Set attendance: "+$scope.convertDate($scope.date));
       $http({url: 'api/attendance.php/attendance/'+$scope.convertDate($scope.date),
@@ -92,7 +87,7 @@
 
 </head>
 
-<body style="padding-top: 51px; padding-left: 10px" data-ng-app="poengApp">
+<body style="padding-top: 51px; padding-left: 20px" data-ng-app="poengApp">
   <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container">
       <div class="navbar-header">
@@ -130,14 +125,15 @@
       </div>
       <div class="row">
         <div class="col-md-4">
+          <input type="text" class="form-control" placeholder="Søk" data-ng-model="elementName"/> 
+        </div>
+        <div class="col-md-8">
           <p>
             <select class="form-control" ng-change="getGroup()" ng-model="groupSelected" ng-options="group.name for group in groups"></select>
           </p>
         </div>
-        <div class="col-md-8">
-          <input type="text" class="form-control" data-ng-model="elementName"/> 
-      </div>
       <div class="row">
+        <div class="col-md-8">
         <table class="table">
           <thead>
             <tr>
@@ -146,15 +142,27 @@
               <th>Kommentar</th>
             </tr>
           </thead>
-          <tr data-ng-repeat="att in attendance | filter:{name: elementName}">
+          <tr data-ng-repeat="att in attendance | filter:{name: elementName}" ng-hide="att.attended" class="ng-hide">
             <td> {{att.name}} </td>
             <td>
-              <input type="checkbox" value="{{att.name}}" ng-click="printAttendance(att)" data-ng-model="att.attended">
+              <input type="checkbox" value="{{att.name}}" data-ng-model="att.attended">
             </td>
             <td><input type="text" class="form-control"  placeholder="Kommentar, årsak til fravær, etc" style="width:100%" data-ng-model="att.comment"></td>
           </tr>
         </table>
         <button data-ng-click="sendAttendance()" class="btn btn-primary btn-lg btn-block">Ferdig</button>
+      </div>
+      <div class="col-md-4">
+        <ul class="list-group">
+          <a href="#" class="list-group-item active">
+            <h4 class="list-group-item-heading">Møtt</h4>
+            <p class="list-group-item-text">Disse var på dagens trening:</p>
+          </a>
+          <li data-ng-repeat="person in attendance" class="list-group-item" ng-show="person.attended" class="ng-show">
+              <input type="checkbox" value="{{person.name}}" data-ng-model="person.attended"> {{person.name}}
+          </li>
+        </ul>
+      </div>
       </div>
     </div>
   </div>
