--- a/index.html
+++ b/index.html
@@ -4,14 +4,96 @@
 <head>
   <meta charset="UTF-8">
   <meta name="author" content="gsk-jam" />
-<!--  <title>GSK Oppmøte</title>
+  <title>GSK Oppmøte</title>
   <meta name="description" content="Oppmøteprotokoll Grimstad Svømmeklubb">
--->
+
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <script src="js/jquery-2.1.1.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/angular/angular.min.js"></script>
+</head>
+
+<body style="padding-top: 51px; padding-left: 20px" data-ng-app="poengApp">
+  <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#"> <img src="img/logo.png" alt="Grimstad svømmeklubb" height="50" width="57"></a>
+      </div>
+    </div>
+  </div>
+
+  <header class="jumbotron">
+    <div class="container">
+      <div class="row">
+        <h3>GSK Oppmøteprotokoll</h3>
+      </div>
+      <div class="row">
+        <div class="visible-md">
+          <p>Registrering av oppmøte i konkurransegruppene.</p>
+        </div>
+      </div>
+    </div>
+  </header>
+  <div data-ng-controller="attCtrl" class="container">
+    <div class="row">
+      <div>
+        <h3 style="text-align: center;">
+          Oppmøte for {{getDayName(date)}} {{date.toLocaleDateString("nb-NO")}}
+        </h3>
+      </div>
+      <div class="row">
+        <div class="col-md-4">
+          <input type="text" class="form-control" placeholder="Søk" data-ng-model="elementName"/> 
+        </div>
+        <div class="col-md-8">
+          <p>
+            <select class="form-control" ng-change="getGroup()" ng-model="groupSelected" ng-options="group.name for group in groups"></select>
+          </p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-8">
+          <table class="table">
+            <thead>
+              <tr>
+                <th>Navn</th>
+                <th>Møtt</th>
+                <th>Kommentar</th>
+              </tr>
+            </thead>
+            <tr data-ng-repeat="att in attendance | filter:{name: elementName}" ng-hide="att.attended" class="ng-hide">
+              <td> {{att.name}} </td>
+              <td>
+                <input type="checkbox" value="{{att.name}}" data-ng-model="att.attended">
+              </td>
+              <td><input type="text" class="form-control"  placeholder="Kommentar, årsak til fravær, etc" style="width:100%" data-ng-model="att.comment"></td>
+            </tr>
+          </table>
+          <button data-ng-click="sendAttendance()" class="btn btn-primary btn-lg btn-block">Ferdig</button>
+        </div>
+        <div class="col-md-4">
+          <ul class="list-group">
+            <li>
+              <a href="#" class="list-group-item active">
+                <h4 class="list-group-item-heading">Møtt</h4>
+                <p class="list-group-item-text">Disse var på dagens trening:</p>
+              </a>
+            </li>
+            <li data-ng-repeat="person in attendance" class="list-group-item ng-show" ng-show="person.attended"->
+              <input type="checkbox" value="{{person.name}}" data-ng-model="person.attended"> {{person.name}}
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
   <script>
   var app = angular.module('poengApp', []);
 
@@ -26,7 +108,7 @@
     $scope.groupSelected = $scope.groups[1];
     $scope.persons = [];
     $scope.attendance = [];
-    
+
     $http.get('api/attendance.php/users/group/'+$scope.groupSelected.id).success(function(data) {
 
       $scope.persons = data;
@@ -85,86 +167,5 @@
   });
 </script>
 
-</head>
-
-<body style="padding-top: 51px; padding-left: 20px" data-ng-app="poengApp">
-  <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-<!--        <a class="navbar-brand" href="#"> <img src="img/logo.png" alt="Grimstad svømmeklubb" height="50" width="57"></a>
--->
-      </div>
-    </div>
-  </div>
-
-  <header class="jumbotron">
-    <div class="container">
-      <div class="row">
-        <!-- <h3>GSK Oppmøteprotokoll</h3> -->
-        <h2>Angular test</h2>
-      </div>
-      <div class="row">
-        <div class="visible-md">
-          <!-- <p>Registrering av oppmøte i konkurransegruppene.</p> -->
-        </div>
-      </div>
-    </div>
-  </header>
-  <div data-ng-controller="attCtrl" class="container">
-    <div class="row">
-      <div>
-        <h3 style="text-align: center;">
-          Oppmøte for {{getDayName(date)}} {{date.toLocaleDateString("nb-NO")}}
-        </h3>
-      </div>
-      <div class="row">
-        <div class="col-md-4">
-          <input type="text" class="form-control" placeholder="Søk" data-ng-model="elementName"/> 
-        </div>
-        <div class="col-md-8">
-          <p>
-            <select class="form-control" ng-change="getGroup()" ng-model="groupSelected" ng-options="group.name for group in groups"></select>
-          </p>
-        </div>
-      <div class="row">
-        <div class="col-md-8">
-        <table class="table">
-          <thead>
-            <tr>
-              <th>Navn</th>
-              <th>Møtt</th>
-              <th>Kommentar</th>
-            </tr>
-          </thead>
-          <tr data-ng-repeat="att in attendance | filter:{name: elementName}" ng-hide="att.attended" class="ng-hide">
-            <td> {{att.name}} </td>
-            <td>
-              <input type="checkbox" value="{{att.name}}" data-ng-model="att.attended">
-            </td>
-            <td><input type="text" class="form-control"  placeholder="Kommentar, årsak til fravær, etc" style="width:100%" data-ng-model="att.comment"></td>
-          </tr>
-        </table>
-        <button data-ng-click="sendAttendance()" class="btn btn-primary btn-lg btn-block">Ferdig</button>
-      </div>
-      <div class="col-md-4">
-        <ul class="list-group">
-          <a href="#" class="list-group-item active">
-            <h4 class="list-group-item-heading">Møtt</h4>
-            <p class="list-group-item-text">Disse var på dagens trening:</p>
-          </a>
-          <li data-ng-repeat="person in attendance" class="list-group-item" ng-show="person.attended" class="ng-show">
-              <input type="checkbox" value="{{person.name}}" data-ng-model="person.attended"> {{person.name}}
-          </li>
-        </ul>
-      </div>
-      </div>
-    </div>
-  </div>
 </body>
 </html>
