--- a/index.html
+++ b/index.html
@@ -49,42 +49,33 @@
         </h3>
       </div>
       <div class="row">
-        <div class="col-md-4">
+        <p>
+          <select class="form-control" ng-change="getGroup()" ng-model="groupSelected" ng-options="group.name for group in groups"></select>
+        </p>
+        <p>
           <input type="text" class="form-control" placeholder="Søk" data-ng-model="elementName"/> 
-        </div>
-        <div class="col-md-8">
-          <p>
-            <select class="form-control" ng-change="getGroup()" ng-model="groupSelected" ng-options="group.name for group in groups"></select>
-          </p>
-        </div>
+        </p>
       </div>
       <div class="row">
-        <div class="col-md-8">
-          <table class="table">
-            <thead>
-              <tr>
-                <th>Navn</th>
-                <th>Møtt</th>
-                <th>Kommentar</th>
-              </tr>
-            </thead>
-            <tr data-ng-repeat="att in attendance | filter:{name: elementName}" ng-hide="att.attended" class="ng-hide">
-              <td> {{att.name}} </td>
-              <td>
-                <input type="checkbox" value="{{att.name}}" data-ng-model="att.attended">
-              </td>
-              <td><input type="text" class="form-control"  placeholder="Kommentar, årsak til fravær, etc" style="width:100%" data-ng-model="att.comment"></td>
-            </tr>
-          </table>
+        <div class="col-xs-6">
+          <ul class="list-group">
+            <a href="#" class="list-group-item active">
+              <h4 class="list-group-item-heading">Oppmøte</h4>
+              <p class="list-group-item-text">Hvem har møtt i dag?</p>
+            </a>
+            <li data-ng-repeat="att in attendance | filter:{name: elementName}"  class="list-group-item ng-hide" ng-hide="att.attended">
+              <input type="checkbox" value="{{att.name}}" data-ng-model="att.attended"> {{att.name}}
+            </li>
+          </ul>
           <button data-ng-click="sendAttendance()" class="btn btn-primary btn-lg btn-block">Ferdig</button>
         </div>
-        <div class="col-md-4">
+        <div class="col-xs-6">
           <ul class="list-group">
             <a href="#" class="list-group-item active">
               <h4 class="list-group-item-heading">Møtt</h4>
               <p class="list-group-item-text">Disse var på dagens trening:</p>
             </a>
-            <li data-ng-repeat="person in attendance" class="list-group-item ng-show" ng-show="person.attended"->
+            <li data-ng-repeat="person in attendance" class="list-group-item ng-show" ng-show="person.attended">
               <input type="checkbox" value="{{person.name}}" data-ng-model="person.attended"> {{person.name}}
             </li>
           </ul>
